# octopus

./: .gitignore  CMakeLists.txt  README.md  configure-couchdb.sh  docker-compose.yml  meson.build
res/: bootstrap.sql  de.codemusings.Octopus.desktop  de.codemusings.Octopus.gresource.xml  de.codemusings.Octopus.gschema.xml
src/: main.c  meson.build  oct-application.c  oct-application.h  oct-cell-renderer-button.c  oct-cell-renderer-button.h  oct-settings-popover.c  oct-settings-popover.h  oct-sync.c  oct-task-view.c  oct-task-view.h  oct-topic-view.c  oct-topic-view.h  octopus.c  octopus.h
